{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 67,
  "lineage": "1d8b20ff-7004-6908-e835-11f07941b321",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d87809d5cbf14b7",
            "association_id": "eipassoc-030f860833ad30832",
            "domain": "vpc",
            "id": "eipalloc-09d87809d5cbf14b7",
            "instance": "i-076d7b109bb86e59d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fd73741c751cabe1",
            "private_dns": "ip-10-0-5-174.ec2.internal",
            "private_ip": "10.0.5.174",
            "public_dns": "ec2-34-203-134-131.compute-1.amazonaws.com",
            "public_ip": "34.203.134.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host-eip",
              "Project": "alpha"
            },
            "tags_all": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host-eip",
              "Project": "alpha"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.sigma-eks-db-subnet-a",
            "data.aws_ami.ubuntu_20_04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sigma_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f2e6c78d0d74fc",
            "association_id": "eipassoc-02d8c6224da0255ce",
            "domain": "vpc",
            "id": "eipalloc-0c8f2e6c78d0d74fc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-046a421fab5774ce2",
            "private_dns": "ip-10-0-1-97.ec2.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-34-197-122-110.compute-1.amazonaws.com",
            "public_ip": "34.197.122.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lga-eks-sigma-nat-eip"
            },
            "tags_all": {
              "Name": "lga-eks-sigma-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:879747268329:instance/i-076d7b109bb86e59d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076d7b109bb86e59d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd73741c751cabe1",
            "private_dns": "ip-10-0-5-174.ec2.internal",
            "private_ip": "10.0.5.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0872a0c8f74c8a636",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c963cc30794fe7b6",
            "tags": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host",
              "Project": "alpha"
            },
            "tags_all": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host",
              "Project": "alpha"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0382930dc122fd23c"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.sigma-eks-db-subnet-a",
            "data.aws_ami.ubuntu_20_04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sigma_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:internet-gateway/igw-0bfc460c324674808",
            "id": "igw-0bfc460c324674808",
            "owner_id": "879747268329",
            "tags": {
              "Name": "lga-eks-sigma-internet-gateway"
            },
            "tags_all": {
              "Name": "lga-eks-sigma-internet-gateway"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sigma_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f2e6c78d0d74fc",
            "connectivity_type": "public",
            "id": "nat-0c943c763a2b8fb28",
            "network_interface_id": "eni-046a421fab5774ce2",
            "private_ip": "10.0.1.97",
            "public_ip": "34.197.122.110",
            "subnet_id": "subnet-0e8bb0a9f773f49e2",
            "tags": {
              "Name": "lga-eks-sigma-nat"
            },
            "tags_all": {
              "Name": "lga-eks-sigma-nat"
            }
          },
          "dependencies": [
            "aws_eip.sigma_nat",
            "aws_subnet.sigma_public_subnet_a",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sigma_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:route-table/rtb-0f216a7289c3e8a0f",
            "id": "rtb-0f216a7289c3e8a0f",
            "owner_id": "879747268329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c943c763a2b8fb28",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sigma_private-01-route"
            },
            "tags_all": {
              "Name": "sigma_private-01-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sigma_nat",
            "aws_nat_gateway.sigma_nat",
            "aws_subnet.sigma_public_subnet_a",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sigma_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:route-table/rtb-0369107f3c127ab49",
            "id": "rtb-0369107f3c127ab49",
            "owner_id": "879747268329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfc460c324674808",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sigma_igw",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sigma_private_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d259554752b5b2e",
            "route_table_id": "rtb-0f216a7289c3e8a0f",
            "subnet_id": "subnet-06fadccf09c1f73e5"
          },
          "dependencies": [
            "aws_eip.sigma_nat",
            "aws_nat_gateway.sigma_nat",
            "aws_route_table.sigma_private_route_table",
            "aws_subnet.sigma_private_subnet_a",
            "aws_subnet.sigma_public_subnet_a",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sigma_private_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08a68ef32b84288",
            "route_table_id": "rtb-0f216a7289c3e8a0f",
            "subnet_id": "subnet-08685b137c978d26a"
          },
          "dependencies": [
            "aws_eip.sigma_nat",
            "aws_nat_gateway.sigma_nat",
            "aws_route_table.sigma_private_route_table",
            "aws_subnet.sigma_private_subnet_b",
            "aws_subnet.sigma_public_subnet_a",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sigma_public_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b77af8295fe95cc0",
            "route_table_id": "rtb-0369107f3c127ab49",
            "subnet_id": "subnet-0e8bb0a9f773f49e2"
          },
          "dependencies": [
            "aws_internet_gateway.sigma_igw",
            "aws_route_table.sigma_public_route_table",
            "aws_subnet.sigma_public_subnet_a",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sigma_public_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a3f0bf7318e9400",
            "route_table_id": "rtb-0369107f3c127ab49",
            "subnet_id": "subnet-0cb67cbdb3e9dc7a8"
          },
          "dependencies": [
            "aws_internet_gateway.sigma_igw",
            "aws_route_table.sigma_public_route_table",
            "aws_subnet.sigma_public_subnet_b",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:security-group/sg-0382930dc122fd23c",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0382930dc122fd23c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230428032622149100000001",
            "name_prefix": "terraform-",
            "owner_id": "879747268329",
            "revoke_rules_on_delete": false,
            "tags": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host-sg",
              "Project": "alpha"
            },
            "tags_all": {
              "AssetAreaName": "LGA",
              "AssetID": "721",
              "AssetName": "Infrastructure",
              "CloudProvider": "aws",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "721-dev-alpha-bastion-host-sg",
              "Project": "alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3893205129",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_8090",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8090,
            "id": "sgrule-1910958991",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_allow_all_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3687475506",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1963103840",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_allow_all_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8,
            "id": "sgrule-1938559832",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "webserver_allow_all_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1832924295",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0382930dc122fd23c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma-eks-db-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-0c963cc30794fe7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c963cc30794fe7b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sigma-eks-db-subnet-a"
            },
            "tags_all": {
              "Name": "sigma-eks-db-subnet-a"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma-eks-db-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-0d756548077442a49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d756548077442a49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sigma-eks-db-subnet-b"
            },
            "tags_all": {
              "Name": "sigma-eks-db-subnet-b"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-06fadccf09c1f73e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fadccf09c1f73e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SigmaVpcPrivateSubnet1a"
            },
            "tags_all": {
              "Name": "SigmaVpcPrivateSubnet1a"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-08685b137c978d26a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08685b137c978d26a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SigmaVpcPrivateSubnet1b"
            },
            "tags_all": {
              "Name": "SigmaVpcPrivateSubnet1b"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-0e8bb0a9f773f49e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8bb0a9f773f49e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SigmaVpcPublicSubnet1a"
            },
            "tags_all": {
              "Name": "SigmaVpcPublicSubnet1a"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sigma_public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:subnet/subnet-0cb67cbdb3e9dc7a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb67cbdb3e9dc7a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879747268329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SigmaVpcPublicSubnet1b"
            },
            "tags_all": {
              "Name": "SigmaVpcPublicSubnet1b"
            },
            "vpc_id": "vpc-02fa4bbedd577a774"
          },
          "dependencies": [
            "aws_vpc.sigma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sigma",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879747268329:vpc/vpc-02fa4bbedd577a774",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ed177970bd4257d",
            "default_route_table_id": "rtb-08d1338ea03542b42",
            "default_security_group_id": "sg-03f94ea0bc5865b3e",
            "dhcp_options_id": "dopt-047e4349f088e643e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02fa4bbedd577a774",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d1338ea03542b42",
            "owner_id": "879747268329",
            "tags": {
              "Name": "lga-eks-sigma"
            },
            "tags_all": {
              "Name": "lga-eks-sigma"
            }
          }
        }
      ]
    }
  ]
}